Excel/CSV出力できるとこまで、プラグインとしてastahとの繋ぎは未実装

--- a/src/main/resources/plugin_ja.properties
+++ b/src/main/resources/plugin_ja.properties
@@ -1,7 +1,7 @@
-pluginName = \u30d7\u30e9\u30b0\u30a4\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
-providerName = Change Vision, Inc.
+pluginName = \u30AF\u30E9\u30B9\u69CB\u9020Excel\u51FA\u529B\u30D7\u30E9\u30B0\u30A4\u30F3
+providerName = mas0061
 
 action_set_label=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u30a2\u30af\u30b7\u30e7\u30f3\u30bb\u30c3\u30c8
-menu_group=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8 \u30b0\u30eb\u30fc\u30d7(&T)
-menu_label=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8 \u30e1\u30cb\u30e5\u30fc(&T)
-menu_tooltip=\u30d7\u30e9\u30b0\u30a4\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
+menu_group=Excel\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8(&E)
+menu_label=\u30AF\u30E9\u30B9\u69CB\u9020\u51FA\u529B(&C)
+menu_tooltip=\u30AF\u30E9\u30B9\u69CB\u9020\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8
