--- a/src/main/resources/OSGI-INF/l10n/bundle_ja.properties
+++ b/src/main/resources/OSGI-INF/l10n/bundle_ja.properties
@@ -1,2 +1,2 @@
-bundle.name=astah*\u30d7\u30e9\u30b0\u30a4\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
-bundle.description=astah*\u7528\u30d7\u30e9\u30b0\u30a4\u30f3\u306e\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3067\u3059\u3002
+bundle.name=\u30AF\u30E9\u30B9\u69CB\u9020Excel\u51FA\u529Bastah*\u30D7\u30E9\u30B0\u30A4\u30F3
+bundle.description=\u30AF\u30E9\u30B9\u69CB\u9020\u3092Excel\u306B\u51FA\u529B\u3059\u308Bastah*\u30D7\u30E9\u30B0\u30A4\u30F3\u3067\u3059\u3002
